Handling for xor points when trying to cut